Source/WebCore/testing/Internals.h
@@ -772,7 +772,7 @@ public:
 
     void setPageVisibility(bool isVisible);
     void setPageIsFocusedAndActive(bool);
-
+    bool isPageActive() const;
 
 #if ENABLE(WEB_RTC)
     void setH264HardwareEncoderAllowed(bool allowed);
